RESOLVED FIXED 78835
Fix use of long long in FractionalLayoutUnit::setRawValue
https://bugs.webkit.org/show_bug.cgi?id=78835
Summary Fix use of long long in FractionalLayoutUnit::setRawValue
Emil A Eklund
Reported 2012-02-16 13:22:32 PST
setRawValue(long long) which is called by the multiple operator has an assertion to verify that the resulting value is within the range of an int. This currently uses abs(long long) which isn't implemented on all platforms we support.
Attachments
Patch (3.00 KB, patch)
2012-02-16 13:31 PST, Emil A Eklund
no flags
Emil A Eklund
Comment 1 2012-02-16 13:31:46 PST
Eric Seidel (no email)
Comment 2 2012-02-16 13:44:24 PST
Comment on attachment 127434 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=127434&action=review The rest looks fine. > Source/WebCore/platform/FractionalLayoutUnit.h:122 > + return value < static_cast<unsigned>(std::numeric_limits<int>::max()) / kFixedPointDenominator; Why is this necessary?
Levi Weintraub
Comment 3 2012-02-16 13:46:15 PST
Comment on attachment 127434 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=127434&action=review >> Source/WebCore/platform/FractionalLayoutUnit.h:122 >> + return value < static_cast<unsigned>(std::numeric_limits<int>::max()) / kFixedPointDenominator; > > Why is this necessary? Since value here is unsigned, you'll get a type warning when comparing them if you don't cast the int.
Eric Seidel (no email)
Comment 4 2012-02-16 13:46:57 PST
Comment on attachment 127434 [details] Patch OK.
WebKit Review Bot
Comment 5 2012-02-16 17:16:32 PST
Comment on attachment 127434 [details] Patch Clearing flags on attachment: 127434 Committed r108006: <http://trac.webkit.org/changeset/108006>
WebKit Review Bot
Comment 6 2012-02-16 17:16:36 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.