Fix use of long long in FractionalLayoutUnit::setRawValue https://bugs.webkit.org/show_bug.cgi?id=78835

Reviewed by Eric Seidel.

Change setRawValue(long long) to compare against int min and max instead
of using abs as not all platforms we support implement a long long
version of abs or llabs.

No new tests.

* platform/FractionalLayoutUnit.h:
(WebCore::FractionalLayoutUnit::setRawValue):
Compare against int min/max instead of just max with abs.

(WebCore::FractionalLayoutUnit::isInBounds):
Fix type mismatch warning.

(WebCore::operator==):
Fix typo.

(WebCore::operator*):
Use long long version of setRawValue.


Canonical link: https://commits.webkit.org/95840@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@108006 268f45cc-cd09-0410-ab3c-d52691b4dbfc